--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -5,6 +5,7 @@
     <color name="app_dark_black">#333333</color>
     <color name="app_grey">#9c9dac</color>
     <color name="app_blue">#507cbe</color>
+    <color name="app_pink">#FF4081</color>
     <color name="app_nav_bg">#f4eded</color>
 
     <color name="a_light_blue">#e3eaff</color>
