--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -1,178 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_profile_About_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F6"
-    android:orientation="vertical">
+    android:clipToPadding="false"
+    android:paddingBottom="100dp">
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="16dp"
-        android:text="About"
-        android:textColor="@color/app_grey"
-        android:textSize="18sp"
-        app:fontName="oswald_regular.ttf" />
-
-    <com.mycity4kids.widget.CustomFontEditText
-        android:id="@+id/aboutEditText"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/main_profile_About_layout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="3dp"
-        android:background="@drawable/mainprofile_thin_border"
-        android:gravity="top"
-        android:hint="Write about yourself"
-        android:overScrollMode="always"
-        android:paddingLeft="16dp"
-        android:paddingTop="12dp"
-        android:scrollbarStyle="insideInset"
-        android:scrollbars="vertical"
-        android:textColor="@color/app_grey"
-        android:textSize="16sp" />
-
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/childDetailTitleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:text="Child Details"
-        android:textColor="@color/app_light_black"
-        android:textSize="16sp"
-        app:fontName="oswald_regular.ttf" />
-
-    <LinearLayout
-        android:id="@+id/childInfoContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#F5F5F6"
         android:orientation="vertical">
 
-    </LinearLayout>
-
-    <com.mycity4kids.widget.CustomFontTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="25dp"
-        android:text="Add Child Details"
-        android:textColor="@color/app_light_black"
-        android:textSize="16sp"
-        app:fontName="oswald_regular.ttf" />
-
-    <RelativeLayout
-        android:id="@+id/addKidContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="13dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/kids_container_border">
+        <com.mycity4kids.widget.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:text="About"
+            android:textColor="@color/app_light_black"
+            android:textSize="18sp"
+            app:fontName="oswald_regular.ttf" />
 
         <com.mycity4kids.widget.CustomFontEditText
-            android:id="@+id/kidNameEditText"
+            android:id="@+id/aboutEditText"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="3dp"
             android:background="@drawable/mainprofile_thin_border"
-            android:gravity="center_vertical"
-            android:hint="NAME (optional)"
-            android:inputType="textPersonName"
-            android:maxLines="1"
-            android:paddingLeft="8dp"
-            android:textColor="#000"
-            android:textSize="14sp" />
+            android:gravity="top"
+            android:hint="@string/write_about_yourself"
+            android:inputType="textMultiLine"
+            android:overScrollMode="always"
+            android:paddingLeft="16dp"
+            android:paddingTop="12dp"
+            android:scrollbarStyle="insideInset"
+            android:scrollbars="vertical"
+            android:textColor="@color/app_light_black"
+            android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/gender"
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/childDetailTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/child_details"
+            android:textColor="@color/app_light_black"
+            android:textSize="16sp"
+            app:fontName="oswald_regular.ttf" />
+
+        <LinearLayout
+            android:id="@+id/childInfoContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#F9F9F9"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+        <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="75dp"
-            android:text="Gender"
-            android:textColor="@color/app_grey"
-            android:textSize="14sp" />
+            android:layout_marginTop="25dp"
+            android:text="@string/add_child_details"
+            android:textColor="@color/app_light_black"
+            android:textSize="16sp"
+            app:fontName="oswald_regular.ttf" />
 
-        <TextView
-            android:id="@+id/dobLabelTextView"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/addKidContainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="75dp"
-            android:text="DOB"
-            android:textColor="@color/app_grey"
-            android:textSize="14sp" />
-
-        <!--<FrameLayout-->
-        <!--android:id="@+id/spinner_hlp"-->
-        <!--android:layout_width="135dp"-->
-        <!--android:layout_height="40dp"-->
-        <!--android:layout_below="@id/gender"-->
-        <!--android:layout_marginBottom="18dp"-->
-        <!--android:layout_marginLeft="16dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--android:layout_marginStart="16dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:background="#fff" />-->
-
-        <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/genderSpinner"
-            android:layout_width="135dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/gender"
-            android:layout_marginBottom="18dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/mainprofile_thin_border" />
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/kids_container_border">
 
-        <ImageView
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_alignRight="@id/genderSpinner"
-            android:layout_alignTop="@+id/genderSpinner"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="12dp"
-            android:src="@drawable/arrowdownnew" />
+            <com.mycity4kids.widget.CustomFontEditText
+                android:id="@+id/kidNameEditText"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/mainprofile_thin_border"
+                android:gravity="center_vertical"
+                android:hint="NAME (optional)"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:paddingLeft="8dp"
+                android:textColor="#000"
+                android:textSize="14sp" />
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/kidsDOBTextView"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/dobLabelTextView"
-            android:layout_marginBottom="18dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginStart="200dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/mainprofile_thin_border"
-            android:gravity="center"
-            android:textColor="#000" />
+            <TextView
+                android:id="@+id/gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="75dp"
+                android:text="Gender"
+                android:textColor="@color/app_grey"
+                android:textSize="14sp" />
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/addNewKidTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/genderSpinner"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/button_round"
-            android:gravity="center"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp"
-            android:text="ADD"
-            android:textColor="@color/white" />
+            <TextView
+                android:id="@+id/dobLabelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="75dp"
+                android:text="DOB"
+                android:textColor="@color/app_grey"
+                android:textSize="14sp" />
 
-    </RelativeLayout>
-</LinearLayout>
+            <!--<FrameLayout-->
+            <!--android:id="@+id/spinner_hlp"-->
+            <!--android:layout_width="135dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_below="@id/gender"-->
+            <!--android:layout_marginBottom="18dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginRight="8dp"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:background="#fff" />-->
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/genderSpinner"
+                android:layout_width="135dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/gender"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/mainprofile_thin_border" />
+
+            <ImageView
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:layout_alignRight="@id/genderSpinner"
+                android:layout_alignTop="@+id/genderSpinner"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/arrowdownnew" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/kidsDOBTextView"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/dobLabelTextView"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="200dp"
+                android:layout_marginStart="200dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/mainprofile_thin_border"
+                android:gravity="center"
+                android:textColor="#000" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/addNewKidTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/genderSpinner"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/button_round"
+                android:gravity="center"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp"
+                android:text="ADD"
+                android:textColor="@color/white" />
+
+        </RelativeLayout>
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
